# VoxTracingCL

./: CMakeLists.txt  README.md
src/: main.cpp
src/Voxel/: VoxelData.hpp
